Bəzi düzəlişlər edildi